<resources>
    <string name="app_name">CoronaApp</string>
    <string name="corona_title">Welcome on the corona app</string>
    <string name="corona_description">Here you can find all the information about covid 19</string>
    <string name="image_description">corona image</string>
    <string name="total_contamination">Total infected: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symptoms_title">Symptoms</string>
    <string name="deaths_title">Total deaths:</string>
    <string name="advice_button_text">Show Advice</string>
    <string name="country"> </string>
    <string name="information_title">Informatie</string>
    <string name="humidity_title">Humidity</string>
    <string name="humidity_value" />
    <string name="information_menu_item">Information</string>
    <string name="corona_notification" />
    <string name="temperature_title">Temperature</string>
    <string name="temperature_value" />
    <string name="information_content">The relationship between humidity and the spread of the coronavirus is scientifically demonstrable. This means that when the humidity is up to 30%, transmitting the virus is the least successful. The virus cannot withstand this humidity. The virus is most resistant at a humidity of between 30 and 40%. This means that the spread of the chance of spreading the virus is the highest. All percentages outside these mentioned, provide a moderate circumstance for the virus, and transmission is not excluded, but also not very easy.</string>
    <string name="advice_text"></string>
    <string name="cancel_text">OK</string>
    <string name="advice_text_positive" />
    <string name="advice_text_negative" />
    <string name="homeTitle">Home</string>
    <string name="symptomsTitle">Symtpoms</string>
</resources>